--- a/app/assets/stylesheets/clients/cds.scss
+++ b/app/assets/stylesheets/clients/cds.scss
@@ -18,4 +18,16 @@
 	background-size: cover;
 	color: #fff;
 	font-size: 10px;
+	margin: 0px 224px 30px;
+	padding: 0px 16px;
+}
+
+h2{
+	margin: 55px 224px 30px;
+	padding: 0px 16px;
+}
+
+.bxslider{
+	margin: 55px 224px 30px;
+	padding: 0px 16px;
 }
