--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -49,7 +49,7 @@ body{
 .way{
 	opacity:0;
 	position:relative;
-	transition:all 1s 0s ease;
+	transition:all 1s 0.5s ease;
 	z-index:0;
 }
 .way:before{
@@ -58,7 +58,7 @@ body{
 	display: block;
 	position:absolute;
 	transform:translateX(-100%);
-	transition: all 1s 0s ease;
+	transition: all 1s 0.5s ease;
 	width:100%;
 	z-index:1;
 }
@@ -67,4 +67,13 @@ body{
 }
 .way.active{
 	opacity:1;
+}
+
+#back{
+	position:fixed;
+	right:20px;
+	bottom:20px;
+}
+#back img{
+	width:50px;
 }
