--- a/app/assets/stylesheets/clients/cds.scss
+++ b/app/assets/stylesheets/clients/cds.scss
@@ -14,12 +14,9 @@
 .main-visual{
 	height: 400px;
 	background-image: image_url("yun_1079.jpg");
-	background-position: 20% 75%;
+	background-position: center;
 	background-size: cover;
-	color: #fff;
 	font-size: 10px;
-	margin: 0px 224px 30px;
-	padding: 0px 16px;
 }
 
 h2{
