--- a/app/assets/stylesheets/clients/cds.scss
+++ b/app/assets/stylesheets/clients/cds.scss
@@ -22,18 +22,13 @@
 
 .main-visual{
 	height: 400px;
-	background-image: image_url("yun_1079.jpg");
+	background-image: image_url("monkey.jpg");
 	background-position: center;
 	background-size: cover;
 	font-size: 10px;
 }
 
-h2{
-	margin: 55px 224px 30px;
-	padding: 0px 16px;
-}
-
-.bxslider{
+.way{
 	margin: 55px 224px 30px;
 	padding: 0px 16px;
 }
