--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,6 +79,7 @@
       <div class="flash"><%= flash[:notice] %></div>
       <% end %>
     </div>
+    <div class="box"></div>
     <%= yield %>
     <footer class="footer">
       <div class="container">
