--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,7 +55,7 @@ body{
 .way{
 	opacity:0;
 	position:relative;
-	transition:all 1s 0.5s ease;
+	transition:all 0.5s 0.5s ease;
 	z-index:0;
 }
 .way:before{
@@ -64,7 +64,7 @@ body{
 	display: block;
 	position:absolute;
 	transform:translateX(-100%);
-	transition: all 1s 0.5s ease;
+	transition: all 0.5s 0.5s ease;
 	width:100%;
 	z-index:1;
 }
@@ -75,3 +75,94 @@ body{
 	opacity:1;
 }
 
+.box{
+	margin-top: 73px;
+}
+
+
+
+.object{
+  color: #fff;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  position: relative;
+  text-decoration: none;
+  display:inline-block;
+  
+}
+
+.object::before {
+  content: '';
+  position: absolute;
+  bottom: 50%;
+  left: 0px;
+  width: 100%;
+  height: 1px;
+  background: #db2369;
+  display: block;
+  -webkit-transform-origin: left top;
+  -ms-transform-origin: left top;
+  transform-origin: left top;
+  -webkit-transform: scale(0, 1);
+  -ms-transform: scale(0, 1);
+  transform: scale(0, 1);
+  -webkit-transition: transform 0.4s cubic-bezier(1, 0, 0, 1);
+  transition: transform 0.4s cubic-bezier(1, 0, 0, 1)
+}
+
+.object:hover::before {
+  -webkit-transform-origin: right top;
+  -ms-transform-origin: right top;
+  transform-origin: right top;
+  -webkit-transform: scale(1, 1);
+  -ms-transform: scale(1, 1);
+  transform: scale(1, 1)
+}
+.object{
+  border:1px solid transparent; 
+   -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+  transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+}
+
+.object::before {
+  content: '';
+  position: absolute;
+  left: 0px;
+  bottom:0px;
+  z-index:-1;
+  width: 0%;
+  height:1px;
+  background: #db2369;
+  box-shadow: inset 0px 0px 0px #db2369;
+  display: block;
+  -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+  transition: all 0.4s cubic-bezier(.5, .24, 0, 1)
+}
+
+.object:hover::before {
+  width:100%;
+}
+
+.object::after {
+  content: '';
+  position: absolute;
+  right: 0px;
+  top:0px;
+  z-index:-1;
+  width: 0%;
+  height:1px;
+  background: #db2369;
+  -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
+  transition: all 0.4s cubic-bezier(.5, .24, 0, 1)
+}
+.object:hover::after {
+  width:100%;
+}
+.object:hover{
+  border-left:1px solid #db2369;
+  border-right:1px solid #db2369;
+}
+.image{
+	margin-top: 2px;
+}
