--- a/app/assets/stylesheets/clients/cds.scss
+++ b/app/assets/stylesheets/clients/cds.scss
@@ -4,17 +4,8 @@
 
 #back{
 	position:fixed;
-	right:20px;
-	bottom:20px;
-}
-#back img{
-	width:50px;
-}
-
-#back{
-	position:fixed;
-	right:20px;
-	bottom:20px;
+	right:30px;
+	bottom:30px;
 }
 #back img{
 	width:50px;
@@ -28,11 +19,11 @@
 	font-size: 10px;
 }
 
-h2{
+/*h2{
 	margin: 55px 224px 30px;
 	padding: 0px 16px;
 }
-
+*/
 .bxslider{
 	margin: 55px 224px 30px;
 	padding: 0px 16px;
