--- a/app/views/clients/orders/buy.html.erb
+++ b/app/views/clients/orders/buy.html.erb
@@ -1,6 +1,8 @@
 <h1>注文内容の確認・編集</h1>
 
-<div>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-4">
 	<h2>お届け先住所</h2>
 
 	<!--clientの自宅住所選択用のラジオボタンを設置-->
@@ -22,7 +24,7 @@
 			</div>
 		<% end %>
 
-		<%= link_to "新規住所追加登録はこちら", new_clients_client_path %>
+		<%= link_to "新規住所追加登録はこちら", new_clients_client_path, class:"btn btn-success" %>
 
 		<!--支払い方法選択用のラジオボタンを設置-->
 		<h2>お支払い方法</h2>
@@ -36,7 +38,7 @@
 			<%= f.radio_button :payment, 2 %>代引き
 		</label>
 </div>
-
+<div class="col-lg-4">
 <div>
 	<p>注文内容</p>
 	<p>商品の小計:<%= "￥" + (@total_price*1.08).floor.to_s %></p>
@@ -44,10 +46,14 @@
 	<p>注文合計:<%= "￥" + (@total_price*1.08 + 500).floor.to_s %></p>
 	<p>ご請求額:<%= "￥" + (@total_price*1.08 + 500).floor.to_s %></p>
 </div>
-	<%= f.submit "注文を確定する" %>
+	<%= f.submit "注文を確定する", class:"btn btn-info btn-lg" %>
 	<% end %>
 
+</div>
 
+<% @items.each do |item| %>
+<%= attachment_image_tag item.cd, :image, :fill, 40, 40, format: 'jpeg', fallback: "noimage.jpg" ,:size =>'60x60' %>
+<% end %>
 
 
 
@@ -68,3 +74,5 @@ $('.two').on('click', function(){
 });
 
 </script>
+
+</div>
