--- a/app/assets/stylesheets/clients/cds.scss
+++ b/app/assets/stylesheets/clients/cds.scss
@@ -28,3 +28,12 @@
 	margin: 55px 224px 30px;
 	padding: 0px 16px;
 }
+
+.container-show{
+	margin: 55px 224px 30px;
+	padding: 0px 16px;
+}
+
+.show{
+	margin: 70px 100px;
+}
