--- a/app/views/admins/cds/add.html.erb
+++ b/app/views/admins/cds/add.html.erb
@@ -1,32 +1,43 @@
 <h2>アーティスト、レーベル、ジャンル追加</h2>
-
-
+<div class="add-items">
 <%= form_for @artist, url: admins_cd_add_info_path do |f| %>
-	<div>
-		<h4>アーティスト名</h4>
-		<%= f.text_field :artist_name, required:true %>
-	</div>
-	<div>
-	<%= f.submit "追加"%>
+	<div class="add-artist">
+		<div>
+			<h4>・レーベル名</h4>
+			<div class="add-item">
+				<%= f.text_field :artist_name, required:true, size: "50*50", class: "add-info-text" %>
+				<div class="add-info">
+					<%= f.submit "追加", class: "btn btn-primary btn-block" %>
+				</div>
+			</div>
+		</div>
 	</div>
 <% end %>
 
 <%= form_for @label, url: admins_cd_add_info_path do |f| %>
-	<div>
-		<h4>レーベル名</h4>
-	<%= f.text_field :label_name, required:true %>
-	</div>
-	<div>
-	<%= f.submit "追加"%>
+	<div class="add-label">
+		<div>
+			<h4>・レーベル名</h4>
+			<div class="add-item">
+				<%= f.text_field :label_name, required:true, size: "50*50", class: "add-info-text"  %>
+				<div class="add-info">
+					<%= f.submit "追加", class: "btn btn-primary btn-block" %>
+				</div>
+			</div>
+		</div>
 	</div>
 <% end %>
 
 <%= form_for @genre, url: admins_cd_add_info_path do |f| %>
-	<div>
-		<h4>ジャンル名</h4>
-	<%= f.text_field :genre_name, required:true %>
-	</div>
-	<div>
-	<%= f.submit "追加"%>
+	<div class="add-genre">
+		<div>
+			<h4>・ジャンル名</h4>
+			<div class="add-item">
+				<%= f.text_field :genre_name, required:true, size: "50*50", class: "add-info-text"  %>
+				<div class="add-info">
+					<%= f.submit "追加", class: "btn btn-primary btn-block" %>
+				</div>
+			</div>
+		</div>
 	</div>
 <% end %>
