--- a/app/assets/stylesheets/clients/cds.scss
+++ b/app/assets/stylesheets/clients/cds.scss
@@ -13,7 +13,7 @@
 
 .main-visual{
 	height: 400px;
-	background-image: image_url("yun_1079.jpg");
+	/*background-image: image_url("yun_1079.jpg");*/
 	background-position: center;
 	background-size: cover;
 	font-size: 10px;
