--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -82,6 +82,7 @@ body{
 
 
 .object{
+	height:106px;
   color: #fff;
   font-family: sans-serif;
   text-transform: uppercase;
@@ -89,7 +90,6 @@ body{
   position: relative;
   text-decoration: none;
   display:inline-block;
-  
 }
 
 .object::before {
@@ -99,7 +99,7 @@ body{
   left: 0px;
   width: 100%;
   height: 1px;
-  background: #db2369;
+  background: #41E8CC;
   display: block;
   -webkit-transform-origin: left top;
   -ms-transform-origin: left top;
@@ -133,8 +133,8 @@ body{
   z-index:-1;
   width: 0%;
   height:1px;
-  background: #db2369;
-  box-shadow: inset 0px 0px 0px #db2369;
+  background: #41E8CC;
+  box-shadow: inset 0px 0px 0px #41E8CC;
   display: block;
   -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
   transition: all 0.4s cubic-bezier(.5, .24, 0, 1)
@@ -152,17 +152,19 @@ body{
   z-index:-1;
   width: 0%;
   height:1px;
-  background: #db2369;
+  background: #41E8CC;
   -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
-  transition: all 0.4s cubic-bezier(.5, .24, 0, 1)
+  transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
 }
 .object:hover::after {
   width:100%;
 }
 .object:hover{
-  border-left:1px solid #db2369;
-  border-right:1px solid #db2369;
+  border:3px solid #41E8CC;
 }
 .image{
 	margin-top: 2px;
+}
+element.style{
+	height:auto;
 }
