--- a/app/assets/stylesheets/clients/orders.scss
+++ b/app/assets/stylesheets/clients/orders.scss
@@ -4,9 +4,31 @@
 
 #back{
 	position:fixed;
-	right:20px;
-	bottom:20px;
+	right:30px;
+	bottom:30px;
 }
 #back img{
 	width:50px;
+}
+
+.address{
+	border:solid 2px #999;
+	padding-bottom: 10px;
+	margin-bottom: 5px;
+	margin-right:auto;
+	margin-left:auto;
+	width:80%;
+}
+.money{
+	margin-top: 20px;
+}
+.date{
+	margin-top: 20px;
+}
+.item{
+	margin-top: 15px;
+	padding-bottom: 15px;
+	border-bottom:solid 2px #999;
+	margin-right:auto;
+	margin-left: auto;
 }
