--- a/app/views/clients/cds/index.html.erb
+++ b/app/views/clients/cds/index.html.erb
@@ -1,8 +1,7 @@
-<section class="main-visual">
-	<div class="main-text">
-		<p>長野県出身のアーティストを集めたECサイト</p>
-	</div>
-</section>
+<div class="main">
+	<%= image_tag '201903_movie2.png'%>
+	<p>長野県出身アーティストを集めたECサイト</p>
+</div>
 
 <h2>ジャンル</h2>
 <ul class="bxslider">
