--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,11 +17,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-body{
-	font-family: 'メイリオ','Hiragino kaku Gothic Pro';
-
-}
-
 .navbar-default{
 	width: 100%;
 	margin: 0;
@@ -76,9 +71,9 @@ body{
 	opacity:1;
 }
 
-.box{
+/*.box{
 	margin-top: 73px;
-}
+}*/
 
 
 
