--- a/app/assets/stylesheets/clients/cds.scss
+++ b/app/assets/stylesheets/clients/cds.scss
@@ -11,6 +11,10 @@
 	width:50px;
 }
 
+.main{
+	position: relative;
+}
+
 .main p{
 	position: absolute;
 	font-family: 'Roboto Condensed', sans-serif;
