--- a/app/assets/stylesheets/clients/cds.scss
+++ b/app/assets/stylesheets/clients/cds.scss
@@ -19,11 +19,11 @@
 	font-size: 10px;
 }
 
-/*h2{
+.genre_name{
 	margin: 55px 224px 30px;
 	padding: 0px 16px;
 }
-*/
+
 .bxslider{
 	margin: 55px 224px 30px;
 	padding: 0px 16px;
