--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -100,7 +100,7 @@ body{
   left: 0px;
   width: 100%;
   height: 1px;
-  background: #41E8CC;
+  background: #51e864;
   display: block;
   -webkit-transform-origin: left top;
   -ms-transform-origin: left top;
@@ -135,7 +135,7 @@ body{
   width: 0%;
   height:1px;
   background: #41E8CC;
-  box-shadow: inset 0px 0px 0px #41E8CC;
+  box-shadow: inset 0px 0px 0px #51e864;
   display: block;
   -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
   transition: all 0.4s cubic-bezier(.5, .24, 0, 1)
@@ -153,7 +153,7 @@ body{
   z-index:-1;
   width: 0%;
   height:1px;
-  background: #41E8CC;
+  background: #51e864;
   -webkit-transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
   transition: all 0.4s cubic-bezier(.5, .24, 0, 1);
 }
@@ -161,7 +161,7 @@ body{
   width:100%;
 }
 .object:hover{
-  border:3px solid #41E8CC;
+  border:3px solid #51e864;
 }
 .image{
 	margin-top: 2px;
