--- a/app/views/admins/cds/index.html.erb
+++ b/app/views/admins/cds/index.html.erb
@@ -1,4 +1,4 @@
-<h2>ジャンル</h2>
+<h2 class="genre_name">ジャンル</h2>
 	<ul class="bxslider">
 		<% @cds.each do |cd| %>
 			<li class="object">
@@ -13,7 +13,7 @@
 
 <% @genres.each do |genre| %>
 	<div class="way">
-	<h2><%= genre.genre_name %></h2>
+	<h2 class="genre_name"><%= genre.genre_name %></h2>
 	<ul class="bxslider">
 		<% genre.cds.each do |cd| %>
 			<li class="object">
