--- a/app/views/admins/cds/index.html.erb
+++ b/app/views/admins/cds/index.html.erb
@@ -1,35 +1,37 @@
-<h2>ジャンル</h2>
-	<ul class="bxslider">
-		<% @cds.each do |cd| %>
-			<li class="object">
-				<%= link_to admins_cd_path(cd.id) do %>
-				    <div class="image"><%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'60x60' %></div>
-					<div><%= cd.artist.artist_name %></div>
-				    <div><%= cd.name %></div>
-				<% end %>
-			</li>
-	    <% end %>
-    </ul>
+<div class="title">
+	<h2>ジャンル</h2>
+		<ul class="bxslider">
+			<% @cds.each do |cd| %>
+				<li class="object">
+					<%= link_to admins_cd_path(cd.id) do %>
+					    <div class="image"><%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'60x60' %></div>
+						<div><%= cd.artist.artist_name %></div>
+					    <div><%= cd.name %></div>
+					<% end %>
+				</li>
+		    <% end %>
+	    </ul>
 
-<% @genres.each do |genre| %>
-	<div class="way">
-	<h2><%= genre.genre_name %></h2>
-	<ul class="bxslider">
-		<% genre.cds.each do |cd| %>
-			<li class="object">
-				<%= link_to admins_cd_path(cd.id) do %>
-					<div class="image"><%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg', fallback: "noimage.jpg" ,:size =>'60x60' %></div>
-					<div><%= cd.artist.artist_name %></div>
-			    	<div><%= cd.name %></div>
-				<% end %>
-			</li>
-    	<% end %>
-	</ul>
-	</div>
-<% end %>
+	<% @genres.each do |genre| %>
+		<div class="way">
+		<h2><%= genre.genre_name %></h2>
+		<ul class="bxslider">
+			<% genre.cds.each do |cd| %>
+				<li class="object">
+					<%= link_to admins_cd_path(cd.id) do %>
+						<div class="image"><%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg', fallback: "noimage.jpg" ,:size =>'60x60' %></div>
+						<div><%= cd.artist.artist_name %></div>
+				    	<div><%= cd.name %></div>
+					<% end %>
+				</li>
+	    	<% end %>
+		</ul>
+		</div>
+	<% end %>
 
-<span id="back">
-	<a href="#">
-		<%= image_tag "arrow.png"  %>
-	</a>
-</span>
+	<span id="back">
+		<a href="#">
+			<%= image_tag "arrow.png"  %>
+		</a>
+	</span>
+</div>
