--- a/app/views/admins/clients/index.html.erb
+++ b/app/views/admins/clients/index.html.erb
@@ -1,15 +1,14 @@
-<h1>顧客一覧</h1>
-
-<% @clients.each do |client| %>
-
-<%= client.id %> . <%= link_to (client.last_name + client.first_name), admins_client_path(client.id) %>
-
-<% end %>
-
-<%= paginate @clients %>
-
-<span id="back">
-	<a href="#">
-		<%= image_tag "arrow.png"  %>
-	</a>
-</span>
+<div class="title">
+	<h2>顧客一覧</h2>
+	<div class="client-pepple">
+		<% @clients.each do |client| %>
+			<h4 class="client-man"><%= client.id %> . <%= link_to (client.last_name + client.first_name), admins_client_path(client.id) %></h4>
+		<% end %>
+	</div>
+		<%= paginate @clients %>
+	<span id="back">
+		<a href="#">
+			<%= image_tag "arrow.png"  %>
+		</a>
+	</span>
+</div>
