--- a/app/views/clients/cds/show.html.erb
+++ b/app/views/clients/cds/show.html.erb
@@ -1,47 +1,96 @@
-<div class="container-show">
-	<div class="row">
-		<div class="col-lg-3">
-			<h1>商品詳細</h1>
-			<p><%= attachment_image_tag @cd, :image, :fill, 40, 40, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'250x250' %></p>
-	</div>
-	<div class="col-lg-9">
-		<div class="show">
-		<p>説明文：<%= @cd.description %></p>
-		<p>アーティスト名：<%= @cd.artist.artist_name %></p>
-        <p>CD名：<%= @cd.name %></p>
-        <p>曲名：
-        	<% @cd.discs.each do |disc| %>
-		    Disc.<%= disc.disc_number %>
-		    <% disc.songs.each do |song| %>
-			<%= song.song_number %>
-			<%= song.song_name %>
-			<% end %>
-			<% end %>
-        </p>
-        <p>ジャンル：<%= @cd.genre.genre_name %></p>
-        <p>レーベル名；<%= @cd.label.label_name %></p>
-        <p>在庫：
-        	<% if @cd.stock <= 0 %>
-        	<%= "✖" %>
-        	<% else %>
-        	<%= @cd.stock %>
-        	<% end %>
-        </p>
-        <p>ステータス：
-        	<% if @cd.stock <= 0 %>
-        	<%= "販売停止" %>
-        	<% else %>
-        	<%= @cd.sale_status %>
-        	<% end %>
-        </p>
-        <p>価格(税込)：<%= (@cd.price*1.08).floor %></p>
-        <p>購入枚数</p>
-        <%= form_for @item, url: clients_items_add_item_path do |f| %>
-		<%= f.hidden_field :cd_id, value: params[:id] %>
-		<%= f.number_field :quantity, required:true, min:"1" %>
-		<%= f.submit "カート追加" %>
-		<% end %>
-	</div>
-</div>
-</div>
+<div class="title">
+        <h2>商品詳細</h2>
+        <div class="show-items">
+                <div class="show-items row">
+                        <div class="col-sm-5">
+                                <div class="show-item">
+                                        <%= attachment_image_tag @cd, :image, :fill, 40, 40, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'400x400' %>
+                                </div>
+                                <div class="show-item">
+                                        <h4>説明文</h4>
+                                        <div class="show-info-item">
+                                                <%= @cd.description %>
+                                        </div>
+                                </div>
+                        </div>
+                        <div class="col-sm-7 show-box2">
+                                <div class="show-item">
+                                        <h4>アーティスト名</h4>
+                                        <div class="show-info-item">
+                                                <%= @cd.artist.artist_name %>
+                                        </div>
+                                </div>
+                                <div class="show--item">
+                                        <h4>CD名</h4>
+                                        <div class="show-info-item">
+                                                <%= @cd.name %>
+                                        </div>
+                                </div>
+                                <div class="show-item">
+                                        <h4>曲名</h4>
+                                        <div class="show-info-item">
+                                                <% @cd.discs.each do |disc| %>
+                                                         <div>
+                                                                Disc.<%= disc.disc_number %>
+                                                         </div>
+                                                        <% disc.songs.each do |song| %>
+                                                        <div class="show-song-number">
+                                                                <%= song.song_number %>.
+                                                                <%= song.song_name %>
+                                                        </div>
+                                                        <% end %>
+                                                <% end %>
+                                        </div>
+                                </div>
+                                <div class="show-item">
+                                        <h4>ジャンル</h4>
+                                        <div class="show-info-item">
+                                                <%= @cd.genre.genre_name %>
+                                        </div>
+                                </div>
+                                <div class="show-item">
+                                        <h4>レーベル名</h4>
+                                        <div class="show-info-item">
+                                                <%= @cd.label.label_name %>
+                                        </div>
+                                </div>
+                                <div class="show-item">
+                                        <h4>在庫</h4>
+                                        <div class="show-info-item">
+                                                <% if @cd.stock <= 0 %>
+                                                <%= "✖" %>
+                                                <% else %>
+                                                <%= @cd.stock %>
+                                                <% end %>
+                                         </div>
+                                 </div>
+                                 <div class="show-item">
+                                        <h4>ステータス</h4>
+                                        <div class="show-info-item">
+                                                <% if @cd.stock <= 0 %>
+                                                <%= "販売停止" %>
+                                                <% else %>
+                                                <%= @cd.sale_status %>
+                                                <% end %>
+                                        </div>
+                                 </div>
+                                 <div class="show-item">
+                                        <h4>税込価格</h4>
+                                        <div class="show-info-item">
+                                                <%= (@cd.price*1.08).floor %>
+                                        </div>
+                                </div>
+                                <div class="show-item">
+                                        <h4>購入枚数</h4>
+                                        <div class="show-info-item">
+                                                <%= form_for @item, url: clients_items_add_item_path do |f| %>
+                                                <%= f.hidden_field :cd_id, value: params[:id] %>
+                                                <%= f.number_field :quantity, required:true, min:"1" %>
+                                                <%= f.submit "カート追加" %>
+                                                <% end %>
+                                        </div>
+                                </div>
+                        </div>
+                </div>
+        </div>
 </div>
