create loading view

--- a/app/assets/stylesheets/clients/items.scss
+++ b/app/assets/stylesheets/clients/items.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the clients/items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.all_box{
+	margin:0 auto;
+	width:90%;
+}
+.btn{
+	height:35px;
+	margin-top: 1px;
+}
+.link{
+	color:#fff;
+}
+.number_field{
+	background-color: #f8f8ff;
+}
+.tab{
+	background-color: #eee;
+}
+
+.tab_bottom{
+	margin-bottom: 20px;
+}
