--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+<div id="loader-bg">
+    <div id="loading">
+        <%= image_tag "logo2_nagareco.png" %>
+    </div>
+  </div>
+
   <body>
     <header class="navbar navbar-default">
       <div class="container">
