--- a/app/assets/stylesheets/clients/clients.scss
+++ b/app/assets/stylesheets/clients/clients.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the clients/clients controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.show_all{
+	width:80%;
+	margin:0 auto;
+}
+
+.btn{
+	color:#fff;
+}
