--- a/app/views/clients/clients/show.html.erb
+++ b/app/views/clients/clients/show.html.erb
@@ -1,18 +1,21 @@
-<h1>My page</h1>
-<h3>氏名 <%= @client.last_name %> <%= @client.first_name %></h3>
-<h3>電話番号　<%= @client.telephone%></h3>
-<h3>自宅郵便番号　<%= @client.post_code%></h3>
-<h3>自宅住所　<%= @client.address%></h3>
-<h3>メールアドレス　<%= @client.email%></h3>
+<div class="show_all">
+<h2>My page</h2>
+<h4>氏名 <%= @client.last_name %> <%= @client.first_name %></h4>
+<h4>電話番号　<%= @client.telephone%></h4>
+<h4>自宅郵便番号　<%= @client.post_code%></h4>
+<h4>自宅住所　<%= @client.address%></h4>
+<h4>メールアドレス　<%= @client.email%></h4>
 
 <% unless @address == [] %>
 
-<h3>登録住所</h3>
+<h4>登録住所</h4>
 
 <div class="create-address">
 	<h4><!-- 文字の大きさのため、あとでcssで調整 -->
-		<table>
-			<thead>
+		<div class="container">
+		<div class="row">
+		<table class="col-lg-6 table table-striped">
+			<thead class="row">
 				<tr>
 					<th>氏名</th>
 				    <th>郵便番号</th>
@@ -25,11 +28,13 @@
 		    		<td><%= address.last_name %> <%= address.first_name %></td>
 				    <td><%= address.sub_post_code %></td>
 				    <td><%= address.sub_address %></td>
-				    <td><%= link_to"削除", clients_remove_address_path(address.id), method: :delete,  "data-confirm" => "削除しますか？"%></td>
+				    <td><%= link_to"削除", clients_remove_address_path(address.id), method: :delete,  "data-confirm" => "削除しますか？", class:"btn btn-danger"%></td>
 			    </tr>
 			<% end %>
 		    </tbody>
 	    </table>
+		</div>
+		</div>
     </h4>
 </div>
 
@@ -41,3 +46,4 @@
 <%= link_to"住所新規登録",new_clients_client_path(id: @client.id)%>
 
 <%= link_to"退会",clients_client_path(@client.id),method: :delete, "data-confirm" => "退会しますか？"%>
+</div>
