--- a/app/views/clients/items/index.html.erb
+++ b/app/views/clients/items/index.html.erb
@@ -1,34 +1,37 @@
-<h1>カート</h1>
+<div class="all_box">
+<h2>カート</h2>
 
 <% if @items == [] %>
 
 	<%= "お客様のカートに商品はありません。" %>
 
 <% else %>
-
-	<table>
+<div class="container">
+	<table class="row tab">
 		<tr>
 			<% total_price = 0 %>
 			<!-- sumに初期値の設定 -->
 			<% @items.each do |item| %>
-				<td rowspan="2"><%= attachment_image_tag item.cd, :image %></td>
+				<td rowspan="2" class="col-lg-1"><%= attachment_image_tag item.cd, :image, :fill, 40, 40, format: 'jpeg', fallback: "noimage.jpg" ,:size =>'60x60' %></td>
 				<td><%= link_to item.cd.name, clients_cd_path(item.cd.id) %></td>
 				<td><%= form_for item, url: clients_item_path(item.id) do |f| %>
-					<%= f.number_field :quantity, value: item.quantity, required:true, min:"1"  %>
+					<%= f.number_field :quantity, value: item.quantity, required:true, min:"1", class:"number_field"  %>
 					<%= f.submit "変更" %></td>
 				<% end %>
 			<% total_price += item.quantity * item.cd.price %>
 			<!-- total_priceを算出 -->
 		</tr>
-		<tr>
+		<tr class="tab_bottom">
 			<td>価格：¥<%= (item.cd.price*1.08).floor %></td>
-			<td><%=link_to "削除", clients_item_path(item.id), method: :delete %></td>
+			<td class="btn btn-danger"><%=link_to "削除", clients_item_path(item.id), method: :delete, class:"link" %></td>
 		</tr>
 			<% end %>
 	</table>
 
 	<% unless @itmes == [] %>
-		<p>小計(<%= @total_quantity %>点の商品):¥ <%= (total_price*1.08).floor %> | <%= link_to "購入手続きへ進む", clients_order_buy_path(current_client.id) %></p>
+		<p>小計(<%= @total_quantity %>点の商品):¥ <%= (total_price*1.08).floor %> | <%= link_to "購入手続きへ進む", clients_order_buy_path(current_client.id), class:"btn btn-info" %></p>
 	<% end %>
 	
 <% end %>
+</div>
+</div>
