--- a/app/assets/stylesheets/clients/cds.scss
+++ b/app/assets/stylesheets/clients/cds.scss
@@ -48,3 +48,10 @@
 	margin: 55px 224px 30px;
 	padding: 0px 16px;
 }
+
+.wave{
+	width:15px;
+	height:500px;
+	background-color: #000;
+	display:inline-block;
+}
