--- a/app/views/clients/cds/index.html.erb
+++ b/app/views/clients/cds/index.html.erb
@@ -3,6 +3,18 @@
 	<p>長野県出身アーティストを集めたECサイト</p>
 </div>
 
+<div class="wave"></div>
+<div class="wave"></div>
+<div class="wave"></div>
+<div class="wave"></div>
+<div class="wave"></div>
+<div class="wave"></div>
+<div class="wave"></div>
+<div class="wave"></div>
+<div class="wave"></div>
+<div class="wave"></div>
+<div class="wave"></div>
+
 <h2 class="genre_name">ジャンル</h2>
 <ul class="bxslider">
 	<% @cds.each do |cd| %>
