--- a/app/views/clients/cds/show.html.erb
+++ b/app/views/clients/cds/show.html.erb
@@ -4,7 +4,7 @@
                 <div class="show-items row">
                         <div class="col-sm-5">
                                 <div class="show-item">
-                                        <%= attachment_image_tag @cd, :image, :fill, 40, 40, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'400x400' %>
+                                        <%= attachment_image_tag @cd, :image, :fill, 400, 400, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'400x400', class: "image" %>
                                 </div>
                                 <div class="show-item">
                                         <h4>説明文</h4>
