--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,7 @@
     <%= yield %>
     <footer class="footer">
       <div class="container">
-        <p class="text-right">CopyRight ながれこ.inc</p>
+        <p class="">© ながれこ.inc</p>
       </div>
     </footer>
 
