--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,20 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+h1, h2, h3, h4, h5, h6, p{
+  margin: 0;
+  padding: 0;
+}
+
+.footer{
+  margin-top: 50px;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  line-height: 5rem;
+  background: #51e8df;
+}
+
 .navbar-default{
 	width: 100%;
 	margin: 0;
@@ -163,4 +177,8 @@
 }
 element.style{
 	height:auto;
+}
+
+.field_with_errors {
+ 
 }
