--- a/app/views/clients/clients/new.html.erb
+++ b/app/views/clients/clients/new.html.erb
@@ -1,13 +1,18 @@
-<h1>住所新規登録</h1>
-
-<%= form_for @address, :url => {:controller => :clients, :action => :create} do |f| %>
-<h2>氏名</h2>
-<%= f.text_field :last_name %><%= f.text_field :first_name %>
-<h2>郵便番号(半角英数字 ハイフンあり)</h2>
-<%= f.text_field :sub_post_code %>
-<h2>住所</h2>
-<%= f.text_area :sub_address %>
-
-<%= f.submit "追加" %>
-
-<% end %>
+<div class="big-box">
+	<div>
+		<div class="title">
+			<h2>住所新規登録</h2>
+			<%= flash[:danger] %>
+			<%= form_for @address, :url => {:action => :create} do |f| %>
+				<h4>氏名</h4>
+				<div>
+				<%= f.text_field :last_name %><%= f.text_field :first_name %>
+				<h4>郵便番号(半角英数字 ハイフンあり)</h4>
+				<%= f.text_field :sub_post_code %>
+				<h2>住所</h2>
+				<%= f.text_area :sub_address %>
+				<%= f.submit "追加" %>
+			<% end %>
+		</div>
+	</div>
+</div>
