--- a/app/views/clients/cds/index.html.erb
+++ b/app/views/clients/cds/index.html.erb
@@ -3,17 +3,34 @@
 	<p>長野県出身アーティストを集めたECサイト</p>
 </div>
 
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
+<div class="all_wave">
+<div class="wave" id="w1"></div>
+<div class="wave" id="w2"></div>
+<div class="wave" id="w3"></div>
+<div class="wave" id="w4"></div>
+<div class="wave" id="w5"></div>
+<div class="wave" id="w6"></div>
+<div class="wave" id="w7"></div>
+<div class="wave" id="w8"></div>
+<div class="wave" id="w9"></div>
+<div class="wave" id="w10"></div>
+<div class="wave" id="w11"></div>
+<div class="wave" id="w12"></div>
+<div class="wave" id="w13"></div>
+<div class="wave" id="w14"></div>
+<div class="wave" id="w15"></div>
+<div class="wave" id="w16"></div>
+<div class="wave" id="w17"></div>
+<div class="wave" id="w18"></div>
+<div class="wave" id="w19"></div>
+<div class="wave" id="w20"></div>
+<div class="wave" id="w21"></div>
+<div class="wave" id="w22"></div>
+<div class="wave" id="w24"></div>
+<div class="wave" id="w25"></div>
+<div class="wave" id="w26"></div>
+<div class="wave" id="w27"></div>
+</div>
 
 <h2 class="genre_name">ジャンル</h2>
 <ul class="bxslider">
