--- a/app/assets/stylesheets/clients/cds.scss
+++ b/app/assets/stylesheets/clients/cds.scss
@@ -49,9 +49,108 @@
 	padding: 0px 16px;
 }
 
+
+.all_wave{
+	width:80%;
+	margin:0 auto;
+}
 .wave{
-	width:15px;
-	height:500px;
+	margin:0 10px;
+	width:10px;
+	height:300px;
 	background-color: #000;
 	display:inline-block;
+	animation-name:wave;
+	animation-duration:0.7s;
+	animation-timing-function:linear;
+	animation-iteration-count:infinite;
+	animation-direction:alternate;
+}
+
+@keyframes wave{
+	0%{
+		transform:scaleY(1);
+	}
+	100%{
+		transform:scaleY(0.2);
+	}
+}
+
+#w2{
+	animation-delay:0.2s;
+}
+#w3{
+	animation-delay:0s;
+}
+#w4{
+	animation-delay:0s;
+}
+#w5{
+	animation-delay:0.2s;
+}
+#w6{
+	animation-delay:0.3s;
+}
+#w7{
+	animation-delay:0.4s;
+}
+#w8{
+	animation-delay:0.5s;
+}
+#w9{
+	animation-delay:0.5s;
+}
+#w10{
+	animation-delay:0.5s;
+}
+#w11{
+	animation-delay:0.6s;
+}
+#w12{
+	animation-delay:1.1s;
+}
+#w13{
+	animation-delay:1.2s;
+}
+#w14{
+	animation-delay:1.3s;
+}
+#w15{
+	animation-delay:1.4s;
+}
+#w16{
+	animation-delay:1.5s;
+}
+#w17{
+	animation-delay:1.6s;
+}
+#w18{
+	animation-delay:1.7s;
+}
+#w19{
+	animation-delay:1.8s;
+}
+#w20{
+	animation-delay:1.9s;
+}
+#w21{
+	animation-delay:2.0s;
+}
+#w22{
+	animation-delay:2.1s;
+}
+#w23{
+	animation-delay:2.2s;
+}
+#w24{
+	animation-delay:2.3s;
+}
+#w25{
+	animation-delay:2.4s;
+}
+#w26{
+	animation-delay:2.5s;
+}
+#w27{
+	animation-delay:2.6s;
 }
