--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,9 @@ h1, h2, h3, h4, h5, h6, p{
   height: 50px;
   text-align: center;
   line-height: 5rem;
-  background: #51e8df;
+  background: #fff;
+  border-style: solid;
+  border-width: thin;
 }
 
 .navbar-default{
