--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,7 +89,7 @@
     <%= yield %>
     <footer class="footer">
       <div class="container">
-        <p class="">© ながれこ.inc</p>
+        <p class="">© ちゃんS.inc</p>
       </div>
     </footer>
 
