--- a/app/views/clients/cds/index.html.erb
+++ b/app/views/clients/cds/index.html.erb
@@ -1,19 +1,28 @@
 <div class="main">
-	<%= image_tag 'music.png'%>
+	<script>
+		jQuery(window).load(function(){
+			$('.slide').bxSlider({
+				mode:"fade",
+				auto: true,
+		        speed: 1000,
+		        moveSlide: 1,
+		        pause: 6000,
+		        minSlides: 1,
+		        maxSlides: 1,
+		        slideWidth: 1000,
+		        pager:false,
+		        randomStart: true,
+		        autoHover: true,
+		        touchEnabled: false
+		    });
+		});
+	</script>
+	<ul class="slide">
+		<li><%= image_tag 'nagano1.jpg', :size => '500x500'%></li>
+		<li><%= image_tag 'nagano2.jpeg', :size => '500x500'%></li>
+	</ul>
 	<p>長野県出身アーティストを集めたECサイト</p>
 </div>
-
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
 
 <h2 class="genre_name">ジャンル</h2>
 <ul class="bxslider">
