--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,18 +17,45 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+/* bootstrapを無効化 */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #6c6b6b;
+}
+
 h1, h2, h3, h4, h5, h6, p{
   margin: 0;
   padding: 0;
 }
+/* end */
+
+.nagareco-inc{
+  color: #fff;
+  height: 70px;
+}
 
 .footer{
-  margin-top: 50px;
   width: 100%;
-  height: 50px;
+  height: 70px;
   text-align: center;
-  line-height: 5rem;
-  background: #51e8df;
+  line-height: 8rem;
+  background: -moz-radial-gradient(#51e8df, #51e8df);
+  background: -webkit-radial-gradient(#67ffb7, #51e8df);
+  background: radial-gradient(#51e864, #51e8df);
+  margin-top: auto;
+}
+
+.cover-box{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.navbar, .container{
+  height: 55px;
+  font-size: 20px;
 }
 
 .navbar-default{
@@ -37,21 +64,6 @@ h1, h2, h3, h4, h5, h6, p{
 	background-color: #fff;
 	position: fixed;
 	z-index: 100;
-}
-
-.disc-number{
-	width: 60px;
-}
-
-.disc-table1{
-	width: 60px;
-	text-align: center;
-}
-
-.disc-table2{
-	width: 400px;
-	margin-right: 30px;
-	text-align: center;
 }
 
 .object{
@@ -88,8 +100,6 @@ h1, h2, h3, h4, h5, h6, p{
 .box{
 	margin-top: 73px;
 }
-
-
 
 .object{
 	height:106px;
