--- a/app/views/admins/clients/show.html.erb
+++ b/app/views/admins/clients/show.html.erb
@@ -4,10 +4,18 @@
 			<div>
 				<h2>顧客詳細</h2>
 				<div class="client-show-box">
-					<h4>氏名 <%= @client.last_name + @client.first_name%></h4>
+
+					<% if @client.deleted? %>
+					<h4>氏名 <%= @client.last_name + @client.first_name + "（退会済み）"%></h4>
+					<% else %>
+					<h4>氏名 <%= @client.last_name + @client.first_name %></h4>
+					<% end %>
 					<h4>電話番号　<%= @client.telephone%></h4>
 					<h4>自宅郵便番号　<%= @client.post_code%></h4>
 					<h4>自宅住所　<%= @client.address%></h4>
+					<h4>メールアドレス　<%= @client.email%></h4>
+
+					<% if @client.addresses.present? %>
 					<h4>登録住所</h4>
 					<div class="create-address">
 						<h4><!-- 文字の大きさのため、あとでcssで調整 -->
@@ -31,7 +39,9 @@
 						    </table>
 					    </h4>
 					</div>
-					<h4>メールアドレス　<%= @client.email%></h4>
+					<% end %>
+
+					<% unless @client.deleted? %>
 					<div class="client-edit-box">
 						<div class="client-edit1">
 							<%= link_to"顧客編集",edit_admins_client_path(@client.id), class: "btn btn-success btn-lg btn-block"%>
@@ -40,6 +50,7 @@
 							<%= link_to"強制退会",admins_client_path(@client.id),method: :delete, "data-confirm" => "退会しますか？", class: "btn btn-danger btn-lg btn-block"%>
 						</div>
 					</div>
+					<% end %>
 
 					<table border = "1">
 						<thead>
@@ -59,17 +70,17 @@
 								<td><%= order.created_at.strftime("%Y-%m-%d") %></td>
 								<td>
 									<% order.order_items.each do |item| %>
-										<div><%= link_to item.cd.name, clients_order_show_path %></div>
+										<div><%= item.cd.name %></div>
 									<% end %>
 								</td>
 								<td>
 									<% order.order_items.each do |item| %>
-										<div><%= link_to item.quantity, clients_order_show_path %></div>
+										<div><%= item.quantity %></div>
 									<% end %>
 								</td>
 								<td>
 									<% order.order_items.each do |item| %>
-										<div><%= link_to "￥"+ (item.cd.price*1.08).floor.to_s, clients_order_show_path %></div>
+										<div><%= "￥"+ (item.cd.price*1.08).floor.to_s %></div>
 									<% end %>
 								</td>
 								<td>￥500</td>
