--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -15,9 +15,11 @@
 
 	<% @orders.each do |order| %>
 
+	<% @client = Client.with_deleted.find(order.client_id) %>
+
 	<tr align = "center">
 		<td>
-			<%= link_to order.client.last_name + order.client.first_name, admins_client_path(order.client.id) %>
+			<%= link_to @client.last_name + @client.first_name, admins_client_path(@client.id) %>
 		</td>
 		<td><%= order.created_at.strftime("%Y-%m-%d") %></td>
 		<td>
