--- a/app/views/admins/cds/index.html.erb
+++ b/app/views/admins/cds/index.html.erb
@@ -1,17 +1,35 @@
+<div class="main">
+	<script>
+		$(function(){
+			$('.slide').slick({
+				accessibility: true,
+                autoplay: true,
+                autoplaySpeed: 2000,
+                fade: true,
+                arrows: false,
+                infinite: true,
+            });
+		});
+	</script>
+	<ul class="slide">
+		<li><%= image_tag 'nagano1.jpg', :size => '500x500'%></li>
+		<li><%= image_tag 'nagano2.jpeg', :size => '500x500'%></li>
+	</ul>
+	<p>長野県出身アーティストを集めたECサイト</p>
+</div>
 
-<div class="title">
 <h2 class="genre_name">ジャンル</h2>
-	<ul class="bxslider">
-		<% @cds.each do |cd| %>
-			<li class="object">
-				<%= link_to admins_cd_path(cd.id) do %>
-				    <div class="image"><%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'60x60' %></div>
-					<div><%= cd.artist.artist_name %></div>
-				    <div><%= cd.name %></div>
-				<% end %>
-			</li>
-	    <% end %>
-    </ul>
+<ul class="bxslider">
+	<% @cds.each do |cd| %>
+		<li class="object">
+			<%= link_to admins_cd_path(cd.id) do %>
+			<div class="image"><%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg', fallback: "noimage.jpg" ,:size =>'60x60' %></div>
+			<div><%= cd.artist.artist_name %></div>
+			<div><%= cd.name %></div>
+			<% end %>
+		</li>
+    <% end %>
+</ul>
 
 <% @genres.each do |genre| %>
 	<div class="way">
@@ -35,90 +53,3 @@
 		<%= image_tag "arrow.png"  %>
 	</a>
 </span>
-
-<script>
-$(function(){
-	jQuery(document).snowfall({
-	flakeCount:3,
-	flakeColor:"#fff",
-	flakeIndex:-1,
-	minSize:30,
-	maxSize:50,
-	round:true,
-	shadow:false,
-	image: '/assets/onpu.png'
-});
-});
-$(function(){
-	jQuery(document).snowfall({
-	flakeCount:3,
-	flakeColor:"#fff",
-	flakeIndex:-1,
-	minSize:30,
-	maxSize:50,
-	round:true,
-	shadow:false,
-	image: '/assets/onpu1.png'
-});
-});
-$(function(){
-	jQuery(document).snowfall({
-	flakeCount:3,
-	flakeColor:"#fff",
-	flakeIndex:-1,
-	minSize:30,
-	maxSize:50,
-	round:true,
-	shadow:false,
-	image: '/assets/onpu2.png'
-});
-});
-$(function(){
-	jQuery(document).snowfall({
-	flakeCount:3,
-	flakeColor:"#fff",
-	flakeIndex:-1,
-	minSize:30,
-	maxSize:50,
-	round:true,
-	shadow:false,
-	image: '/assets/onpu3.png'
-});
-});
-$(function(){
-	jQuery(document).snowfall({
-	flakeCount:3,
-	flakeColor:"#fff",
-	flakeIndex:-1,
-	minSize:30,
-	maxSize:50,
-	round:true,
-	shadow:false,
-	image: '/assets/onpu4.png'
-});
-});
-$(function(){
-	jQuery(document).snowfall({
-	flakeCount:3,
-	flakeColor:"#fff",
-	flakeIndex:-1,
-	minSize:30,
-	maxSize:50,
-	round:true,
-	shadow:false,
-	image: '/assets/onpu5.png'
-});
-});
-$(function(){
-	jQuery(document).snowfall({
-	flakeCount:3,
-	flakeColor:"#fff",
-	flakeIndex:-1,
-	minSize:30,
-	maxSize:50,
-	round:true,
-	shadow:false,
-	image: '/assets/onpu6.png'
-});
-});
-</script>
